# esteedee-embed

./: Cargo.toml  README.md
src/: main.rs
